--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,7 +11,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Build
-      run: docker build . -t go-test
+    - name: 'Build:dockerimage'
+      uses: docker/build-push-action@v1
+      with:
+        registry: ghcr.io
+        username: "ijimiji"
+        password: ${{ secrets.PAT }}
+        repository: ijimiji/go-coding-challenge-jr
+        tags: latest
     - name: Test
       run: docker run go-test go test ./...
