--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,5 +19,11 @@ jobs:
         password: ${{ secrets.PAT }}
         repository: ijimiji/go-coding-challenge-jr
         tags: latest
+    - name: Login
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.PAT }}
     - name: Test
       run: docker run go-test go test ./...
