--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,8 +17,8 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.PAT }}
-    - name: 'Build:dockerimage'
-      uses: docker/build-push-action@v1
+    - name: 'Build'
+      uses: docker/build-push-action@v2
       with:
         registry: ghcr.io
         username: "ijimiji"
@@ -26,4 +26,4 @@ jobs:
         repository: ijimiji/go-coding-challenge-jr
         tags: latest
     - name: Test
-      run: docker run go-test go test ./...
+      run: docker run latest go test ./...
