Make tests verbose

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,4 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
 
     - name: Test
-      run: docker run ghcr.io/ijimiji/go-coding-challenge-jr:latest go test ./...
+      run: docker run ghcr.io/ijimiji/go-coding-challenge-jr:latest go test -v ./...
